--- a/sign.html
+++ b/sign.html
@@ -17,7 +17,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Enter Password">
             <button type="submit">Sign up</button>
-            <p>I already have an account? <a href="index.html">Login here</a></p>
+            <p>I already have an account? <a href="index.html">Log in</a></p>
             <p id="signUpMessage"></p>
         </form>
     </div>
